--- a/index.html
+++ b/index.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Protfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/protfolio.css">
 </head>
 <body>
-    <header>
-
+    <header class="header seconday-bg">
+        <nav class="open-sans-normal">
+            <h3 class="nav-tite">Ma<span class="single">r</span>y</h3>
+            <ul>
+                <li><a class="dark-color" href="">Protfolio</a></li>
+                   <li><a class="dark-color" href="">Blog</a></li> 
+                    <li><a href=""><button class="btn">Hire me</button></a></li>
+                
+            </ul>
+        </nav>
+        <div class="banner">
+           <div class="banner-content">
+            <h4 class="first-heading dark-color">Hi, I am</h4>
+            <h1 class="main-heading">Marry Hardy</h1>
+            <p class="banner-description">
+                Shot what able cold new see hold.Friendly as an betrayed 
+                formerly he. Morning because as to society behaved moments.
+            </p>
+            <button class="btn">Download CV</button>
+            <button class="btn">Contact</button>
+           </div> 
+           <img class="banner-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
+        <section class="about seconday-bg">
+            <h4 class="section-head">About me</h4>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple,
+                 clean and slick websites that provide real value to the end user. Thousands of clients
+                  have procured exceptional resulfs while working with me.
+                 Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+        </section>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
